add react index page

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "style-loader": "^0.23.1",
     "sugarss": "^2.0.0",
     "terser-webpack-plugin": "^1.2.3",
+    "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1",
@@ -75,8 +76,10 @@
   "dependencies": {
     "dotenv": "^6.2.0",
     "lodash": "^4.17.11",
+    "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-html-parser": "^2.0.2",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
