--- a/.eslintrc
+++ b/.eslintrc
@@ -119,19 +119,14 @@
     "react/no-direct-mutation-state": 1,
     "react/no-multi-comp": 1,
     "react/no-set-state": 0,
+    "react/jsx-no-bind": 0,
     "react/no-unknown-property": 1,
     "react/prefer-es6-class": 1,
     "react/prop-types": 1,
     "react/react-in-jsx-scope": 1,
     "react/self-closing-comp": 1,
     "react/sort-comp": 1,
-    "react/destructuring-assignment": [
-      2,
-      "always",
-      {
-        "ignoreClassFields": true
-      }
-    ],
+    "react/destructuring-assignment": 0,
     "jsx-a11y/label-has-for": [
       "error",
       {
