--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "dotenv": "^6.2.0",
     "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
@@ -83,6 +85,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   }
 }
