--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "dotenv": "^6.2.0",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
