add create parcel implementation

--- a/package.json
+++ b/package.json
@@ -77,8 +77,10 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "dotenv": "^6.2.0",
+    "joi": "^14.3.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
+    "net": "^1.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
