--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js",
     "build:dev": "webpack --config webpack.dev.js",
-    "build:prod": "webpack --config webpack.prod.js",
+    "heroku-postbuild": "webpack --config webpack.prod.js",
     "test": "exit 0",
     "lint": "eslint '**/*.js'",
     "lint:fix": "prettier-eslint './src/index.js' --write"
@@ -77,6 +77,7 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "dotenv": "^6.2.0",
+    "express": "^4.16.4",
     "joi": "^14.3.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
