--- a/package.json
+++ b/package.json
@@ -3,11 +3,24 @@
   "version": "1.0.0",
   "description": "sentit front-end",
   "private": true,
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "setupFiles": [
+      "./setup.js"
+    ],
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest",
+      ".+\\.(css|styl|less|sass|scss|png|jpg|jpeg|ttf|woff|woff2)$": "jest-transform-stub"
+    }
+  },
   "scripts": {
     "start": "webpack-dev-server --config webpack.dev.js",
     "build:dev": "webpack --config webpack.dev.js",
     "heroku-postbuild": "webpack --config webpack.prod.js",
-    "test": "exit 0",
+    "test": "NODE_END=test jest --coverage -u",
+    "coverage": "cat ./coverage/lcov.info | coveralls",
     "lint": "eslint '**/*.js'",
     "lint:fix": "prettier-eslint './src/index.js' --write"
   },
@@ -43,11 +56,16 @@
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.4.10",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^5.0.0",
+    "coveralls": "^3.0.3",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.10",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "enzyme-to-json": "^3.3.5",
     "eslint": "^5.15.1",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
@@ -55,6 +73,8 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
+    "jest": "^24.7.1",
+    "jest-transform-stub": "^2.0.0",
     "lint-staged": "^8.1.5",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
@@ -62,6 +82,7 @@
     "prettier-cli": "^0.1.0",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1",
+    "react-test-renderer": "^16.8.6",
     "sass-loader": "^7.1.0",
     "scss-loader": "0.0.1",
     "style-loader": "^0.23.1",
