--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
       "./setup.js"
     ],
     "transform": {
-      "^.+\\.(js|jsx)$": "babel-jest",
+      ".+\\.(js|jsx)$": "babel-jest",
       ".+\\.(css|styl|less|sass|scss|png|jpg|jpeg|ttf|woff|woff2)$": "jest-transform-stub"
     }
   },
@@ -47,70 +47,70 @@
   },
   "homepage": "https://github.com/mrkingz/SendIT-Frontend#readme",
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
-    "@babel/plugin-transform-arrow-functions": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.4.10",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.7.1",
-    "babel-loader": "^8.0.5",
-    "clean-webpack-plugin": "^2.0.0",
-    "copy-webpack-plugin": "^5.0.0",
-    "coveralls": "^3.0.3",
-    "css-loader": "^2.1.0",
-    "cssnano": "^4.1.10",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1",
-    "enzyme-to-json": "^3.3.5",
-    "eslint": "^5.15.1",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^1.3.1",
-    "jest": "^24.7.1",
-    "jest-transform-stub": "^2.0.0",
-    "lint-staged": "^8.1.5",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
-    "postcss-loader": "^3.0.0",
-    "prettier-cli": "^0.1.0",
-    "prettier-eslint": "^8.8.2",
-    "prettier-eslint-cli": "^4.7.1",
-    "react-test-renderer": "^16.8.6",
-    "sass-loader": "^7.1.0",
+    "@babel/core": "7.3.4",
+    "@babel/plugin-proposal-class-properties": "7.3.4",
+    "@babel/plugin-proposal-object-rest-spread": "7.3.4",
+    "@babel/plugin-transform-arrow-functions": "7.2.0",
+    "@babel/plugin-transform-runtime": "7.3.4",
+    "@babel/preset-env": "7.3.4",
+    "@babel/preset-react": "7.0.0",
+    "autoprefixer": "9.4.10",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "24.7.1",
+    "babel-loader": "8.0.5",
+    "clean-webpack-plugin": "2.0.0",
+    "copy-webpack-plugin": "5.0.0",
+    "coveralls": "3.0.3",
+    "css-loader": "2.1.0",
+    "cssnano": "4.1.10",
+    "enzyme": "3.9.0",
+    "enzyme-adapter-react-16": "1.12.1",
+    "enzyme-to-json": "3.3.5",
+    "eslint": "5.15.1",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-react": "7.12.4",
+    "file-loader": "3.0.1",
+    "html-webpack-plugin": "3.2.0",
+    "husky": "1.3.1",
+    "jest": "24.7.1",
+    "jest-transform-stub": "2.0.0",
+    "lint-staged": "8.1.5",
+    "mini-css-extract-plugin": "0.5.0",
+    "node-sass": "4.11.0",
+    "postcss-loader": "3.0.0",
+    "prettier-cli": "0.1.0",
+    "prettier-eslint": "8.8.2",
+    "prettier-eslint-cli": "4.7.1",
+    "react-test-renderer": "16.8.6",
+    "sass-loader": "7.1.0",
     "scss-loader": "0.0.1",
-    "style-loader": "^0.23.1",
-    "sugarss": "^2.0.0",
-    "terser-webpack-plugin": "^1.2.3",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1",
-    "webpack-merge": "^4.2.1"
+    "style-loader": "0.23.1",
+    "sugarss": "2.0.0",
+    "terser-webpack-plugin": "1.2.3",
+    "url-loader": "1.1.2",
+    "webpack": "4.29.6",
+    "webpack-cli": "3.2.3",
+    "webpack-dev-server": "3.2.1",
+    "webpack-merge": "4.2.1"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "classnames": "^2.2.6",
-    "dotenv": "^6.2.0",
-    "express": "^4.16.4",
-    "joi": "^14.3.1",
-    "jwt-decode": "^2.2.0",
-    "lodash": "^4.17.11",
-    "net": "^1.0.2",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-html-parser": "^2.0.2",
-    "react-redux": "^6.0.1",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "axios": "0.18.1",
+    "classnames": "2.2.6",
+    "dotenv": "6.2.0",
+    "express": "4.16.4",
+    "joi": "14.3.1",
+    "jwt-decode": "2.2.0",
+    "lodash": "4.17.15",
+    "net": "1.0.2",
+    "prop-types": "15.7.2",
+    "react": "16.8.4",
+    "react-dom": "16.8.4",
+    "react-html-parser": "2.0.2",
+    "react-redux": "6.0.1",
+    "react-router-dom": "4.3.1",
+    "redux": "4.0.1",
+    "redux-devtools-extension": "2.13.8",
+    "redux-thunk": "2.3.0"
   }
 }
