--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
   "dependencies": {
     "axios": "0.18.1",
     "classnames": "2.2.6",
-    "dotenv": "6.2.0",
+    "dotenv": "^8.1.0",
     "express": "4.16.4",
     "joi": "14.3.1",
     "jwt-decode": "2.2.0",
